fixed app title on linux